Added native methods and logging