@@ -14,6 +14,16 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
+//    implementation 'org.slf4j:slf4j-api:2.0.9'
+//    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:3.0.0-alpha1'
+//    
+//    implementation 'org.apache.logging.log4j:log4j:2.21.1'
+
+    // SLF4J API dependency
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
+
     implementation 'org.antlr:antlr4-runtime:4.13.1'
     antlr 'org.antlr:antlr4:4.13.1'
 }
@@ -40,6 +50,18 @@ sourceSets {
     generated {
         java.srcDir 'generated-src/antlr/main/'
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
 
 compileJava.dependsOn generateGrammarSource
